--- a/landing_page.html
+++ b/landing_page.html
@@ -112,7 +112,7 @@
 
         .hero-content {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 0 10rem;
         }
 
         .hero h1 {
@@ -148,8 +148,8 @@
         .hero-image img {
             width: 100%;
             max-width: 800px;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+            /* border-radius: 15px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.1); */
         }
 
         .funding-badge {
@@ -654,6 +654,9 @@
                 flex-direction: column;
                 text-align: center;
             }
+            .hero-content {
+                margin: 0 0rem;
+            }
         }
 
         /* Scroll animations */
@@ -691,18 +694,20 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>From Student to Entrepreneur<br>in less than a year</h1>
-            <p>Transform your innovative ideas into successful businesses with our comprehensive support program</p>
+            <p>Download the Punjab Startup Entrepreneurship Mindset App and launch your first business with ease - all from your phone.</p>
             <div class="hero-image">
                 <div style="background: linear-gradient(to right, #f3f4f6, #e5e7eb); height: 400px; border-radius: 15px; display: flex; align-items: center; justify-content: center; position: relative;">
-                    <div style="position: absolute; top: 20px; left: 20px; background: white; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-                        <div style="font-size: 2rem; margin-bottom: 0.5rem;">💡</div>
-                        <div style="font-weight: bold;">Innovation</div>
+                    <div style="position: absolute; top: 150px; left: 80px; background: white; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                        <div style="font-size: 2rem; margin-bottom: 0.5rem;"><span style="font-size: 2rem; margin-bottom: 0.5rem;">+ 48.50%</span></div>
+                        <div style="font-weight: bold;">$ 10,980</div>
+                        <div style="font-size: 0.8rem;">Total Revenue</div>
                     </div>
-                    <div style="position: absolute; bottom: 20px; right: 20px; background: white; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-                        <div style="font-size: 2rem; margin-bottom: 0.5rem;">🚀</div>
-                        <div style="font-weight: bold;">Launch</div>
+                    <div style="position: absolute; bottom: 20px; right: 80px; background: white; padding: 1rem; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                        <div style="font-size: 2rem; margin-bottom: 0.5rem;"><span style="font-size: 2rem; margin-bottom: 0.5rem;">+ 3.50%</span></div>
+                        <div style="font-weight: bold;">96</div>
+                        <div style="font-weight: bold;">Total Customers</div>
                     </div>
-                    <div style="font-size: 4rem;">👥</div>
+                    <div style="font-size: 4rem;"><img src="tetratech-logo.png" alt=""></div>
                 </div>
             </div>
             <div class="funding-badge">
